# miab-build-invincible-apps-python

./: README.md  charts.md  justfile  pyproject.toml  requirements.in  requirements.txt
.devcontainer/: devcontainer.json
durable-vs-normal-execution/durable/: counter.py
durable-vs-volatile-execution/durable/: counter.py  starter.py  worker.py
durable-vs-volatile-execution/volatile/: counter.py
hello-ip/: activities.py  shared.py  worker.py  workflow.py
hello-ip/templates/: index.html
iplocate/: activities.py  app.py
