[project]
name = "miab-build-invincible-apps-python"
version = "0.1.0"
description = "A demo project for Temporal.io @ DeepOpinion Offsite 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask[async]>=3.1.1",
    "nicegui>=2.20.0",
    "requests>=2.32.4",
    "temporalio>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iplocate"]
